--- a/templates/main.html
+++ b/templates/main.html
@@ -40,7 +40,7 @@
     <span class="navbar-text">
     <nav class="navbar navbar-light bg-light">
        <form class="form-inline" id="login" method="POST" action="{{url_for('login')}}">
-            <input id="login_username" placeholder="username" name="login_username">
+            <input type="text" id="login_username" placeholder="username" name="login_username">
             <input type="password" id="login_password" placeholder="password" name="login_password">
             <button  class="btn btn-outline-success my-2 my-sm-0" id="loginbutton" type="submit" name="submit" value="login" aria-label="Login"> Log In </button> 
     </form>
@@ -134,8 +134,11 @@
                 <td class="category">{{post.category}}</td>
                 <td class="other">{{post.other}}</td>
                 <td class="photo"><img src="{{url_for('blob',iid=post.iid)}}"></td>
-                {% if currentUser != None and currentUser != post.username %}
-                <td><button type="button" class="messageUser">Message user</button></td>
+                {% if currentUser != '' and currentUser != post.username %}
+                <td><button type="submit" class="messageUser">Message user</button></td>
+                <td><form method="post" name="message" action="{{url_for('messageUser')}}">
+                    <input type="hidden" name="message"></form>
+                </td>
                 {% endif %}
             </tr>
         {% endfor %}
@@ -146,13 +149,16 @@
                 <input type="hidden" name="uid" id="uid" value="">
                 <input type="hidden" name="iid" id="iid" value="">
                 <p><label><textarea id="messageBody" rows="4" cols="50" maxlength="200" name="messageBody"></textarea></label></p>
-                <p><button type="button" id="messageButton">Send Message</button></p>
+                <p><button type="submit" id="messageButton">Send Message</button></p>
             </form>
         </div>
     </div>
 </div>
 {% endblock %}
 
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
@@ -160,8 +166,7 @@
 
 <script>
 /*global $*/
-
-/* sanitize input strings from xss attacks by escaping special characters */
+  
 function sanitize(string) {
   const map = {
       '&': '&amp;',
@@ -175,65 +180,42 @@ function sanitize(string) {
   return string.replace(reg, (match)=>(map[match]));
 }
 
-/*
-  Displays a textbox for user to enter in a message to send to another user
-  row's iid and uid info is retrieved and sent to the backend to determine
-  item info
-*/
 $('#posts-list').on('click','.messageUser',function(event){
     var postUID = $(this).closest('tr').data('uid');
     var postIID = $(this).closest('tr').data('iid');
+    console.log(postUID);
+    console.log(postIID);
     $.post("{{url_for('getUserItemInfo')}}",
         {'uid':postUID,'iid':postIID},
         fillDialogTitle)
     $("#messageUserDialog").dialog("open");
 })
 
-/*
-  Fills the dialog title with information about post's poster and post item 
-  description
-  Adds post uid and iid to the hidden inputs to be retrieved when the message is
-  sent
-*/
-function fillDialogTitle(obj) {
-    $('#uid').val(obj['uid']);
-    $('#iid').val(obj['iid']);
-    $("#messageUserDialog").dialog('option','title', 
-                                    'Message ' + obj['username'] + ' about '
-                                            + obj['description']);
-}
-
-/*
-  Executed when user wants to send the message.
-  Post's uid and iid are retrieved along with message (which is then sanitized)
-  and sent to the backend to insert message into the database.
-*/
 $('#messageButton').click(function(){
-  var uid = $('#uid').val();
-  var iid = $('#iid').val();
-  var description = sanitize($('#messageBody').val());
+  var uid = $('#messageUserDialog #uid').val();
+  var iid = $('#messageUserDialog #iid').val();
+  var description = sanitize($('#messageUserDialog #messageBody').val());
   $.post("{{url_for('messageUser')}}",
         {'uid':uid,'iid':iid,'description':description}, 
         alertMessageSent);
 })
 
-/*
-  Close the dialog and alert user if the message was successfully sent.
-  Otherwise, keep dialog open and alert otherwise.
-*/
 function alertMessageSent(obj) {
     if (obj['last_insert_id()']) {
-        $('#messageUserDialog').dialog('close');
         alert('Message sent successfully');
     } else {
         alert ('Message not sent. Please try again.')
     }
 }
 
-/* 
-  Hides the message dialog form when the page initially loads and set how they 
-  will show and hide.
-*/
+function fillDialogTitle(obj) {
+    $('#messageUserDialog #uid').val(obj['uid']);
+    $('#messageUserDialog #iid').val(obj['iid']);
+    $("#messageUserDialog").dialog('option','title', 
+                                    'Message ' + obj['username'] + ' about '
+                                            + obj['description']);
+}
+
 $(document).ready(function () {
     $(function () {
         $("#messageUserDialog").dialog({
